# HQ

./: README.md  __init__.py  archive.py  config.py  decoder.py  demo.py  encoding.py  init_pool.py  instance.py  logging_utils.py  objectives.py  pyproject.toml  requirements.txt  run_batch.ps1  runner.py  types.py  算法细节.md
algorithms/: __init__.py  base.py  hho.py  ig.py  moead.py  nsga2.py
algorithms/__pycache__/: hho.cpython-311.pyc.2263068801712  ig.cpython-311.pyc.2246099029424  moead.cpython-311.pyc.1941344493616  nsga2.cpython-311.pyc.1941344770736  nsga2.cpython-311.pyc.2998359406512
case_01_30J3S2F/run_00/: comparison.txt  comparison.xlsx
case_01_30J3S2F/run_01/: comparison.txt  comparison.xlsx
case_01_30J3S2F/run_02/: comparison.txt  comparison.xlsx
case_02_40J3S2F/run_00/: comparison.txt  comparison.xlsx
case_02_40J3S2F/run_01/: comparison.txt  comparison.xlsx
case_02_40J3S2F/run_02/: comparison.txt  comparison.xlsx
case_03_50J4S2F/: instance.json
case_03_50J4S2F/run_00/: comparison.txt  (+1 more)
docs/: algorithm_improvements_literature.md
interactions/: __init__.py  c1_elite_migration.py  c2_rhythm_coop.py  r1_struct_suppress.py  r2_territorial_invade.py
metrics/: __init__.py  contribution.py  cr.py  cv.py  hv.py  igd.py  spacing.py
rl/: __init__.py  high_level_q.py  low_level_q.py
scripts/: auto_improve_three_algos.py  run_compare.py  run_compare_baseline.py  run_compare_baseline_table.py  run_compare_batch.py  run_full_hq.py  run_medium.py  run_nsga.py  run_quick_test.py
viz/: compare.py  gantt.py  pareto.py  pareto_compare.py  progress.py
(+189 files in other folders)
