[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hq-dhfsp"
version = "0.1.0"
description = "HQ-learning cooperative–competitive multi-algorithm framework for DHFSP (skeleton)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "typing_extensions",
  "matplotlib",
  "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

